# podcaster

./: .env.example  .gitignore  LICENSE  Makefile  README.md  example.env  pyproject.toml  pytest.ini  requirements.txt  setup.py
config/: .env.example  default.json  default.yaml
configs/: export_settings.yaml.example  podcast_config.yaml.example  script_prompt.md  story_prompt.md  tts_voices.yaml.example
docs/: ARCHITECTURE.md  SUMMARY.md  TODO.md  architecture.md  configuration_guide.md  file_formats.md  pipeline_workflow.md  product_overview.md
examples/: custom_providers.py  simple_podcast.py
podcaster/: __init__.py
podcaster/editing/: __init__.py
podcaster/export/: __init__.py
podcaster/metadata/: __init__.py
podcaster/research/: __init__.py
podcaster/script_generation/: __init__.py
podcaster/tts/: __init__.py
podcaster/utils/: __init__.py
prompts/: chapters_generation_prompt.txt  description_generation_prompt.txt  image_prompt_generation.txt  research_prompt.txt  script_generation_prompt.txt  tags_generation_prompt.txt  title_generation_prompt.txt
scripts/: README.md  cli.py
src/podcaster/: __init__.py
src/podcaster/core/: __init__.py  audio.py  episode.py  karaoke.py  orchestrator.py  podcast.py  video.py
src/podcaster/llm/: __init__.py  generator.py  providers.py
src/podcaster/models/: configs.py  schemas.py
src/podcaster/prompts/: loader.py
src/podcaster/providers/: elevenlabs.py  openai.py
src/podcaster/tts/: __init__.py  providers.py  synthesizer.py
src/podcaster/utils/: __init__.py  audio.py  config.py  file_manager.py
tests/: __init__.py  conftest.py  test_models_configs.py  test_models_schemas.py  test_prompts_loader.py  test_providers_openai.py
tests/integration/: test_workflow.py
tests/unit/: test_core.py  test_llm.py
