[DESCRIPTION] This file should contain project metadata for Python packaging.

Expected sections:
- [build-system] - Build backend configuration
- [project] - Project metadata (name, version, description, authors)
- [project.optional-dependencies] - Optional dependency groups
- [tool.ruff] - Code linting configuration (if used)
- [tool.mypy] - Type checking configuration (if used)
- [tool.pytest] - Testing configuration (if used)

[TODO] Define project metadata when implementation begins
